--- a/style.css
+++ b/style.css
@@ -50,27 +50,7 @@ body {
     text-align: left;
     color: white;
 }
-#gamencontent{
+#gamelist {
     display: flex;
-    position: absolute;
-    top: 8px;
-    left: 5px;
-    width:10vw;
-    height: 250px;
-    background-color:aqua;
-    border-radius: 25px;
-}
-#gamelist{
-    width:450px;
- 
-}
-#wwdcontent{
-    display: flex;
-    position: absolute;
-    top: 8px;
-    right: 5px;
-    width:10vw;
-    height: 250px;
-    background-color:aqua;
-    border-radius: 25px;
+    right: 0;
 }
