--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ body {
     position:absolute;
     justify-content: space-between;
     right:0;
+    width: 100%;
+    padding: 0 1rem;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: none;
+    top: 100%;
 }
 #headtitle {
     background-color:rgb(44, 126, 126);
