--- a/style.css
+++ b/style.css
@@ -34,7 +34,14 @@ body {
         
     }
 
-   
+    #headtitle {
+        background-color:rgb(44, 126, 126);
+        font-family: "Bebas Neue", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        color:yellow;
+          
+    }
     
     .half{
         width: 100vw;
@@ -42,7 +49,7 @@ body {
        
 }
 #skaneflag{
-    
+    width:100px;
     margin-top: 20px;
     margin-left: 2%;
 }
@@ -163,10 +170,15 @@ border-radius: 5px;
    color:yellow;
 
 }
+
+#message{
+    display: flex;
+
+}
  
 
 #text{
-    width: 186px ;
+    width: 153px ;
     height:200px ; 
 }
 
@@ -300,12 +312,12 @@ border-radius: 5px;
     }
     #text{
        
-        margin-top:20px;
+        margin-left: 48px;
     }
     #email{
         width: 150px;
         height: 25px;
-        margin-left:1px;
+        margin-left: 18px;
         
         
     }
@@ -313,6 +325,7 @@ border-radius: 5px;
         width: 150px;
         height: 25px;
         margin-bottom: 5px;
+        margin-left: 16px;
     }
     #submit{
         color:yellow;
@@ -476,10 +489,10 @@ padding-right:140px;
     
 }
 #text{
-    width: 333px;
+    width: 304px;
     height:200px;
    
-    margin-top:5px;
+    
 }
 #email{
     width: 300px;
